# Unknown-1.0-CPP

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Package.bat  Publish.py  README.md  TODO  Unknown 1.0++.sln  Unknown development tool.cbp  a.out  cbuild-ECORE-CLEAN.cb  cbuild-ECORE-LINUX.cb  cbuild-ECORE-WIN.cb  cbuild-ETEST-LINUX.cb  cbuild.cb  cbuild.py  generateProject.sh  rpl.py  setup.py  test.sh
Engine/: CMakeLists.txt
Engine/libs/: CMakeLists.txt
Engine/src/: IUpdateable.cpp  Image.cpp  Image.h  Loader.cpp  Loader.h  UI.cpp  UI.h  UI2D.cpp  Unknown.cpp  Unknown.h  Utils.h
Engine/src/Audio/: SDLAudioEngine.cpp  SDLAudioEngine.h
Engine/src/Editor/: CoreEditor.h  EditorBase.cpp  EntityEditor.cpp  FileSystemViewer.cpp
Engine/src/Engine/: EngineConfig.h
Engine/src/Entity/: AnimationRenderComponent.h  BasePrototype.h  BasicRenderComponent.cpp  BasicRenderComponent.h  Entity.cpp  Entity.h  EntityPrototype.h  ImageRenderComponent.cpp  PhysicsBodyComponent.cpp  PhysicsBodyComponent.h  TimerComponent.h
Engine/src/Filesystem/: Filesystem.cpp  Imemstream.cpp  Imemstream.h  PAKFileStream.h
Engine/src/Font/: FontGlyph.cpp  FontGlyph.h  FontManager.cpp  StaticText.cpp  StaticText.h
Engine/src/GL/: GL.cpp
Engine/src/Graphics/: Camera3D.cpp  Camera3D.h  FrameBuffer.cpp  FrameBuffer.h  GLBackend.cpp  GLBackend.h  PlaceholderTexture.h  RenderingBackend.cpp  RenderingBackend.h  RenderingPipeline3D.cpp  RenderingPipeline3D.h  SDLBackend.cpp  SDLBackend.h  Shader.cpp  SkyBox3D.cpp
Engine/src/Imgui/: imconfig.h
Engine/src/Input/: KeyBind.h  Mouse.cpp  Mouse.h
Engine/src/Model/: Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  (+2 more)
Unknown 1.0++/: Animation.cpp  Animation.h  CMakeLists.txt  Colour.cpp  Colour.h  Entity.cpp  Entity.h  Font.cpp  Font.h  IInitable.h  IUpdateable.h  Image.cpp  Image.h  Input.cpp  Input.h  KeyBind.cpp  KeyBind.h  Loader.cpp  Loader.h  Log.cpp  Log.h  Makefile  Map.cpp  Map.h  Particle.cpp  Particle.h  Physics.cpp  Physics.h  PythonScript.cpp  PythonScript.h  Quadtree.cpp  Quadtree.h  ReadMe.txt  SharedVariable.cpp  SharedVariable.h  Sprite.cpp  Sprite.h  Timer.cpp  Timer.h  UI.cpp  (+13 more)
Unknown 1.0++/Audio/: Sound.cpp  WAVSound.cpp  WAVSound.h
Unknown 1.0++/Debug/: vc120.idb
Unknown 1.0++/Editor/: CoreEditor.cpp  EditorBase.cpp  EditorBase.h  EntityEditor.cpp  EntityEditor.h  FileSystemViewer.cpp  FileSystemViewer.h  LogViewer.cpp  LogViewer.h  SceneViewer.cpp  SceneViewer.h  ViewerBase.cpp  ViewerBase.h  imgui_draw.cpp  imgui_impl_opengl3.cpp
Unknown 1.0++/Engine/: EngineConfig.cpp  EngineConfig.h
Unknown 1.0++/Entity/: AnimationRenderComponent.cpp  AnimationRenderComponent.h  BasicRenderComponent.cpp  BasicRenderComponent.h  Component.cpp  Component.h  Entity.cpp  Entity.h  EntityPrototype.cpp  EntityPrototype.h  ImageRenderComponent.cpp  ImageRenderComponent.h  PhysicsBodyComponent.cpp  PhysicsBodyComponent.h  TimerComponent.cpp  TimerComponent.h
Unknown 1.0++/Event/: Event.cpp  Event.h  EventManager.cpp  EventManager.h  ItterativeEventHandler.cpp  ItterativeEventHandler.h
Unknown 1.0++/Filesystem/: FSUtils.cpp  FSUtils.h  File.h  Filesystem.cpp  Filesystem.h  PAKFileStream.cpp  PAKFileStream.h
Unknown 1.0++/Font/: BitmapFont.cpp  BitmapFont.h  Font.cpp  Font.h  FontGlyph.cpp  FontGlyph.h  StaticText.cpp  StaticText.h  TTFont.cpp  TTFont.h
Unknown 1.0++/GL/: GL.cpp  GL.h
Unknown 1.0++/Graphics/: Camera3D.cpp  Camera3D.h  FileShader.cpp  FileShader.h  FrameBuffer.cpp  FrameBuffer.h  GLBackend.cpp  GLBackend.h  RenderingBackend.cpp  RenderingBackend.h  RenderingPipeline3D.cpp  RenderingPipeline3D.h  SDLBackend.cpp  SDLBackend.h  Shader.cpp  Shader.h  SkyBox3D.cpp  SkyBox3D.h
Unknown 1.0++/Imgui/: CMakeLists.txt  GUI.h
Unknown 1.0++/Input/: KeyBind.cpp  KeyBind.h  Mouse.h
Unknown 1.0++/Map/: BasicMapGenerator.cpp  BasicMapGenerator.h  BinaryMapGenerator.cpp
Unknown 1.0++/Model/: Mesh.cpp  Mesh.h  MeshContainer.cpp  MeshContainer.h  MeshRenderer.h  TexturedMeshRenderer.cpp  TexturedMeshRenderer.h
Unknown 1.0++/Renderer/: BasicTileMapRenderer.cpp  BasicTileMapRenderer.h  Camera.cpp  Camera.h  IRenderable.h  ImageDirectoryTileMapRenderer.cpp  ImageDirectoryTileMapRenderer.h
Unknown 1.0++/Resource/: ResourceManager.h
Unknown 1.0++/Scene/: CollisionManager.cpp  CollisionManager.h  DebugScene.cpp  DebugScene.h  Scene.cpp  Scene.h  SceneElementPrototype.h  SceneGraph.cpp  SceneManager.cpp  SceneManager.h
Unknown 1.0++/Settings/: SettingsParser.h
Unknown 1.0++/Tracy/: CMakeLists.txt
Unknown 1.0++/Types/: Colour.cpp  Colour.h  Dimension.cpp  Direction.cpp  Direction.h  Point.cpp  Rect.h  Vector.cpp  Vector.h
Unknown 1.0++/UI/: HTMLGL.cpp  HTMLGL.h
Unknown 1.0++/scripting/: Scripting.h
Unknown 1.0++/src/: IInitable.cpp  IInitable.h  ITagable.cpp  ITagable.h  Image.cpp  Image.h  Loader.cpp  Loader.h  Log.cpp  Log.h  Map.cpp  Particle.cpp  Singleton.h  Timer.cpp  Timer.h  UI.cpp  UI.h  UK.h  Unknown.cpp  Unknown.h  Utils.h
Unknown Test/: .gitignore  2DFrag.glsl  2DVert.glsl  Animation.json  BasicGraphicsTest.cpp  Bullet.json  CMakeLists.txt  Circle_frag.glsl  Circle_vert.glsl  Config.json  ContactListener.cpp  ContactListener.h  FBO_Frag.glsl  FBO_vert.glsl  Frag.glsl  GB.mtl  Ground.json  Ground_proto.json  ImageFrag.glsl  ImageVert.glsl  Keybinds.ini  MainMenuUI.json  Makefile  NNThing.py  Obstacle.json  OtherPlayerEntity.json  PathfindingTest.cpp  PathfindingTest.h  PhysGameGUI.json  PhysicsTestScene.cpp  PhysicsTestScene.h  PlayerEntity.json  ReadMe.txt  RenderTest2D.cpp  RenderTest2D.h  RenderTestScene.cpp  RenderTestScene.h  Round.mtl  Sky_frag.glsl  Sky_vert.glsl  (+22 more)
Unknown Test/Assets/: Test.html
Unknown Test/Debug/: vc120.idb
Unknown Test/entities/: Bullet.json  Ground.json  Obstacle.json  OtherBullet.json  OtherPlayerEntity.json  PlayerEntity.json
Unknown Test/src/: BasicGraphicsTest.cpp  BasicGraphicsTest.h  PathfindingTest.cpp  PathfindingTest.h  PhysicsTestScene.cpp  PhysicsTestScene.h  RenderTest2D.cpp  RenderTest2D.h  RenderTestScene.cpp  RenderTestScene.h  UnknownTest.cpp
(+168 files in other folders)
